# rust-portfolio

./: .env
app/: Cargo.toml
app/src/: main.rs  server.rs
app/src/modules/: mod.rs
app/src/modules/auth/controller/: controller.rs
app/src/modules/auth/models/: grant.rs  group.rs  mod.rs  role.rs  user.rs
app/src/modules/auth/test/controller/: controller.rs
app/src/modules/chlabs/: mod.rs
app/src/modules/chlabs/controller/: controller.rs
