[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-web = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"

[dev-dependencies]
cargo-watch = "8.1.2"