[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dotenv_codegen = "0.15.0"
env_logger = "0.9.0"
actix-web = "4.1.0"
mongodb = "2.3.0"
dotenv = "0.15.0"
tokio = "1.20.1"


[dev-dependencies]
cargo-watch = "8.1.2"